@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-03-05T08:18:35Z",
-  "count_outdated" : 3091,
-  "uniques_outdated" : 586,
-  "count" : 3232,
-  "uniques" : 600,
+  "timestamp" : "2024-03-05T16:17:31Z",
+  "count_outdated" : 3094,
+  "uniques_outdated" : 587,
+  "count" : 3234,
+  "uniques" : 601,
   "views" : [
-    {
-      "timestamp": "2024-02-20T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 1, 3 ],
-      "count_decinc": [ 0, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-02-21T00:00:00Z",
       "count": 21,
@@ -88,12 +79,12 @@
     },
     {
       "timestamp": "2024-03-05T00:00:00Z",
-      "count": 28,
-      "count_minmax": [ 28, 28 ],
-      "count_decinc": [ 0, 28 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
+      "count": 30,
+      "count_minmax": [ 28, 30 ],
+      "count_decinc": [ 0, 30 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
