@@ -1,12 +1,7 @@
 {
-  "count": 141,
+  "count": 140,
   "uniques": 13,
   "views": [
-    {
-      "timestamp": "2024-02-20T00:00:00Z",
-      "count": 3,
-      "uniques": 1
-    },
     {
       "timestamp": "2024-02-21T00:00:00Z",
       "count": 21,
@@ -49,8 +44,8 @@
     },
     {
       "timestamp": "2024-03-05T00:00:00Z",
-      "count": 28,
-      "uniques": 1
+      "count": 30,
+      "uniques": 2
     }
   ]
 }
